production.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simpleapp-production
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/port: '8000'
        prometheus.io/scrape: 'true'
      labels:
        app: simpleapp
        version: production
    spec:
      containers:
        - env:
            - name: APP_VERSION
              value: v1
          image: 'edhs0011/simple_app:latest'
          name: simpleapp-production
          ports:
            - containerPort: 8000
            - containerPort: 9080
