rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simpleapp
spec:
  host: simpleapp
  subsets:
  - name: v1
    labels:
      version: v1
