vs_full.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simpleapp
spec:
  hosts:
  - "*"
  gateways:
  - simpleapp-gateway
  http:
  - match:
    - uri:
        exact: /simpleapp
    - uri:
        exact: /
    route:
    - destination:
        host: simpleapp
        subset: production
        port:
          number: 9080
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simpleapp
spec:
  host: simpleapp
  subsets:
  - name: production
    labels:
      version: production
